--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,9 +1,19 @@
+boto3==1.9.169
+botocore==1.12.169
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0
 django-bootstrap-form==3.4
+django-storages==1.7.1
 djangorestframework==3.9.1
+docutils==0.14
+jmespath==0.9.4
 Pillow==5.3.0
+python-dateutil==2.8.0
 python-decouple==3.1
 pytz==2018.7
+s3transfer==0.2.1
+six==1.12.0
 static3==0.7.0
+urllib3==1.25.3
+whitenoise==4.1.2
