--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,6 +4,7 @@ dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0
 django-bootstrap-form==3.4
+django-multiselectfield==0.1.8
 django-storages==1.7.1
 djangorestframework==3.9.1
 docutils==0.14
